--- a/os/home.html
+++ b/os/home.html
@@ -52,19 +52,19 @@
                     <p class="text-white app-txt">settings</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="hfpay.html"><img class="app-img img-fluid" src="images/i2.png" alt="settings"></a>
-                    <p class="text-white app-txt">HF pay</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-stream.html"><img class="app-img img-fluid" src="images/stream.png" alt="settings"></a>
+                    <p class="text-white app-txt">EB Stream</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-remind-me.html"><img class="app-img img-fluid" src="images/i3.png" alt="settings"></a>
-                    <p class="text-white app-txt">Remind me</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-files.html"><img class="app-img img-fluid" src="images/files.png" alt="settings"></a>
+                    <p class="text-white app-txt">EB Files</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-calculator.html"><img class="app-img img-fluid" src="images/i4.png" alt="settings"></a>
-                    <p class="text-white app-txt">Calculator</p>
+                    <a id="tap" onclick="audio.play()" href="app-school.html"><img class="app-img img-fluid" src="images/pmsa.png" alt="settings"></a>
+                    <p class="text-white app-txt">PMSAPTHSS KAKKOVE</p>
                 </div>
                 <div class="col-4 col-md-4">
                     <a id="tap" onclick="audio.play()" href="app-prayer-time.html"><img class="app-img img-fluid" src="images/i5.png" alt="settings"></a>
