--- a/os/settings.html
+++ b/os/settings.html
@@ -34,6 +34,14 @@
         </thead>
         <tbody>
           <tr>
+            <td class="bg-dark text-white">Shut down</td>
+            <td class="bg-dark text-white"><a href="https://haseefmuhammed.github.io/edubotog/"><img class="setting-shut" src="images/power btn.png" alt=""></a></td>
+          </tr>
+          <tr>
+            <td class="bg-dark text-white">Connect to the app</td>
+            <td class="bg-dark text-white"><a href="#">Connect</a></td>
+          </tr>
+          <tr>
             <td class="bg-dark text-white">Operating system</td>
             <td class="bg-dark text-white">Edu Bot Os</td>
           </tr>
