--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/icon.png" type="image/logo">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://haseefmuhammed.github.io/Haseef-Swift/haseef-swift-og.css"> -->
   <title>EDU BOT</title>
 </head>
 <body>
 
   <div class="d-flex justify-content-center">
-    <button id="powerButton"><img class="img-fluid" src="images/power btn.png" alt=""></button>
+   <img id="powerButton" class="img-fluid power-btn hs-drop-shadow" src="images/power btn.png" alt="">
   </div>
   <div class="d-flex justify-content-center">
     <video id="powerVideo" src="images/power on video.mp4" class="d-none" autoplay muted></video>
