--- a/os/app-eb-chat.html
+++ b/os/app-eb-chat.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Flowway Mobile</title>
+    <title>EB CHAT</title>
     <link rel="stylesheet" href="style2.css">
-    <link rel="icon" href="images/icon  removed.png" type="image/logo">
+    <link rel="icon" href="images/icon.png" type="image/logo">
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,32 +20,19 @@
 
 <header>
     <nav  class="fixed-top bg-dark">
-        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="#"> <i class="fa-solid fa-arrow-left"></i></a> Updating</h4>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="home.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Files</h4>
     </nav>
 </header>
 
-
-<section class="mt-5 align-items-center text-center">
-    <video class="load" src="images/14c066e7398545ec9d3fc303b9694623.webm" autoplay loop muted></video>
-    <h1 id="loginBtn" class="text-white">Please wait it take a few minutes..</h1>
+<section class="mt-5">
+  <iframe class="iframe4" src="https://www5.cbox.ws/box/?boxid=951737&boxtag=jASV2p" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
 </section>
 
 
 
 
+    
 
-<script>
-document.getElementById("loginBtn").addEventListener("click", function() {
-    var password = prompt("Enter password:");
-    if (password === "admin-ats") {
-        window.location.href = "home.html";
-    } else {
-        alert("Wrong password!");
-        window.location.href = "app-system-updater.html"; // Redirect to original page
-    }
-});
-
-</script>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
