--- a/os/app-school.html
+++ b/os/app-school.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Flowway Mobile</title>
+    <title>EB SHOOL</title>
     <link rel="stylesheet" href="style2.css">
-    <link rel="icon" href="images/icon  removed.png" type="image/logo">
+    <link rel="icon" href="images/icon.png" type="image/logo">
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
