--- a/os/home.html
+++ b/os/home.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Flowway Mobile</title>
+    <title>EDU BOT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/icon  removed.png" type="image/logo">
+    <link rel="icon" href="images/icon.png" type="image/logo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -52,7 +52,7 @@
                     <p class="text-white app-txt">settings</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-eb-stream.html"><img class="app-img img-fluid" src="images/stream.png" alt="settings"></a>
+                    <a id="tap" onclick="audio.play()" href="app-eb-stream.html"><img class="app-img img-fluid" src="images/stream 2.0.png" alt="settings"></a>
                     <p class="text-white app-txt">EB Stream</p>
                 </div>
                 <div class="col-4 col-md-4">
@@ -67,8 +67,8 @@
                     <p class="text-white app-txt">PMSAPTHSS KAKKOVE</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-prayer-time.html"><img class="app-img img-fluid" src="images/i5.png" alt="settings"></a>
-                    <p class="text-white app-txt">Prayer time</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-chat.html"><img class="app-img img-fluid" src="images/EB CHAT.png" alt="settings"></a>
+                    <p class="text-white app-txt">EB CHAT</p>
                 </div>
                 <div class="col-4 col-md-4">
                     <a id="tap" onclick="audio.play()" href="index.html"><img class="app-img img-fluid" src="images/i7.png" alt="settings"></a>
