--- a/os/settings.html
+++ b/os/settings.html
@@ -10,13 +10,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-dark">
-    <!-- // Dont use this operationg system without lisence
-// copyright 2024 Haseef Muhammer
-// Web Craft and Any Time Services
-// Library FLowwaypc
-// css library Haseef Swift language
-// Server Git Hub
-// This website already hosted on netlify inc -->
+      <!-- All rights resieved from FLOWWAY PUBLICATIONS 
+  THIS IS UNDER LICENSE TO KNOW ABOUT LICENCE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO/CONTACT
+  IF YOU ARE MAKING COPY OF THE ORGINAL ONE YOU MIGHT RESIEVE COPYWRITE AND WE WILL MAKE A COMPLAINT ON COURT.
+
+  -----TO GET LICENSE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO-----------
+  
+  ------------
+
+  IF YOU WANT AN OPERATING SYSTEM PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO /OR/ HASEEF-WS.NETLIFY.APP
+
+  LICENSE NO :  HW-FL-MB-001-2024
+  ©2024
+
+
+  ----- Dont use this operationg system without lisence-----
+  copyright 2024 Haseef Muhammed
+  Web Craft and Any Time Services
+  Library FLowwaypc
+  css library: Haseef Swift language
+  Server Git Hub
+  This website already hosted on netlify inc
+  -->
 
 <header>
     <nav class="fixed-top bg-dark">
@@ -46,51 +61,87 @@
             <img src="images/ebConfig.png" alt="">
             <h3>Or enter it manually</h3>
             <p>eb.configadmin123</p>
+            <h1>Download app</h1>
+            <img src="images/edu connect apk qr code.png" alt="">
             <button class="btn btn-primary" onclick="dialogClose()">Close</button>
           </dialog>
+          <tr>
+            <td class="bg-dark text-white">Features</td>
+            <td class="bg-dark text-white" onclick="manual()">Watch video</td>
+            <dialog id="manual" class="dialog-manual">
+              <h1>Features</h1>
+              <video src="images/manual.mp4" controls loop width="100%" height="10%"></video>
+              <button class="btn btn-primary" onclick="dialogClose()">Close</button>
+            </dialog>
+          </tr>
           <tr>
             <td class="bg-dark text-white">Operating system</td>
             <td class="bg-dark text-white">Edu Bot Os</td>
           </tr>
           <tr>
             <td class="bg-dark text-white">Version</td>
-            <td class="bg-dark text-white "><a class="text-decoration-none text-white" href="#">1</a></td>
+            <td class="bg-dark text-white "><a class="text-decoration-none text-white" href="#">5.8</a></td>
           </tr>
           <tr>
             <td class="bg-dark text-white">Last update date</td>
-            <td class="bg-dark text-white">26-06-2024</td>
+            <td class="bg-dark text-white">15-07-2024</td>
           </tr>
+
           <tr>
             <td class="bg-dark text-white">Published date</td>
             <td class="bg-dark text-white">26-06-2024</td>
           </tr>
           <tr>
+            <td class="bg-dark text-white">Screen Saver</td>
+            <td class="bg-dark text-white" onclick="saver()">Open</td>
+            <dialog id="saver" class="dialog-admin">
+              <h1>EDU BOT SCREEN SAVER</h1>
+              <iframe src="https://player.vimeo.com/video/983509398?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="520" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="EDU BOT SCREEN SAVER - Made with Clipchamp"></iframe>
+              <!-- <p>I'm Haseef Muhammed PC, a certified  frontend developer from Malappuram, Kerala. I specialize in creating responsive and visually engaging websites with expertise in HTML, CSS, and JavaScript, J Quary , Bootstrap <br> My website :- haseef-ws.netlify.app</p>
+              <h4>Class: 9H</h4>
+              <h4>School: PMSAPTHSS KAKKOVE</h4> -->
+              <button class="btn btn-primary mt-3" onclick="dialogClose()">Close</button>
+            </dialog>
+          </tr>
+          <tr>
             <td class="bg-dark text-white">Developer</td>
-            <td class="bg-dark text-white">Haseef muhammed p c</td>
+            <td class="bg-dark text-white" onclick="admin1()">Haseef Muhammed Pc</td>
+            <dialog id="about1" class="dialog-admin">
+              <h1>Haseef Muhammed PC</h1>
+              <img src="images/haseef og.png" alt="">
+              <p>I'm Haseef Muhammed PC, a certified  frontend developer from Malappuram, Kerala. I specialize in creating responsive and visually engaging websites with expertise in HTML, CSS, and JavaScript, J Quary , Bootstrap <br> My website :- haseef-ws.netlify.app</p>
+              <h4>Class: 9H</h4>
+              <h4>School: PMSAPTHSS KAKKOVE</h4>
+              <button class="btn btn-primary" onclick="dialogClose()">Close</button>
+            </dialog>
+          </tr>
+          <tr>
+            <td class="bg-dark text-white">Designer</td>
+            <td class="bg-dark text-white" onclick="admin2()">Agney A</td>
+            <dialog id="about2" class="dialog-admin">
+              <h1>Agney A</h1>
+              <img src="images/agney og.png" alt="">
+              <p>Agney A is a multifaceted talent, excelling as a singer, designer, and technician. With a passion for music, Agney A delivers captivating performances that resonate with audiences. His design skills and technical expertise complement his artistic endeavors, creating a unique blend of creativity and precision.</p>
+              <h4>Class: 9E</h4>
+              <h4>School: PMSAPTHSS KAKKOVE</h4>
+              <button class="btn btn-primary" onclick="dialogClose()">Close</button>
+            </dialog>
           </tr>
           <tr>
             <td class="bg-dark text-white">Server</td>
-            <td class="bg-dark text-white">git hub</td>
+            <td class="bg-dark text-white">NG ROK</td>
           </tr>
           <tr>
             <td class="bg-dark text-white">server</td>
             <td class="bg-dark text-white">netlify</td>
           </tr>
           <tr>
-            <td class="bg-dark text-white">apk</td>
+            <td class="bg-dark text-white">Apk</td>
             <td class="bg-dark text-white">mit app inventor</td>
           </tr>
           <tr>
-            <td class="bg-dark text-white">browser</td>
-            <td class="bg-dark text-white">mit app inventor</td>
-          </tr>
-          <tr>
-            <td class="bg-dark text-white">update type</td>
+            <td class="bg-dark text-white">Update type</td>
             <td class="bg-dark text-white">globel software (gs)</td>
-          </tr>
-          <tr>
-            <td class="bg-dark text-white">sub</td>
-            <td class="bg-dark text-white">flowway os</td>
           </tr>
           <tr>
             <td class="bg-dark text-white">Defualt os</td>
@@ -125,6 +176,44 @@
     window.location.href = "settings.html";
 }
 
+function manual(){
+    const dialog = document.getElementById("manual");
+    dialog.showModal();
+      }
+    function dialogClose(){
+    window.location.href = "settings.html";
+}
+
+function manual(){
+    const dialog = document.getElementById("manual");
+    dialog.showModal();
+      }
+    function dialogClose(){
+    window.location.href = "settings.html";
+}
+function admin1(){
+  const dialogAdmin1 = document.getElementById("about1");
+    dialogAdmin1.showModal();
+      }
+    function dialogClose(){
+    window.location.href = "settings.html";
+}
+
+function admin2(){
+  const dialogAdmin1 = document.getElementById("about2");
+    dialogAdmin1.showModal();
+      }
+    function dialogClose(){
+    window.location.href = "settings.html";
+}
+
+function saver(){
+  const dialogAdmin1 = document.getElementById("saver");
+    dialogAdmin1.showModal();
+      }
+    function dialogClose(){
+    window.location.href = "settings.html";
+}
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
