--- a/os/home.html
+++ b/os/home.html
@@ -9,13 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <!-- // Dont use this operationg system without lisence
-// copyright 2024 Haseef Muhammer
-// Web Craft and Any Time Services
-// Library FLowwaypc
-// css library Haseef Swift language
-// Server Git Hub
-// This website already hosted on netlify inc -->
+      <!-- All rights resieved from FLOWWAY PUBLICATIONS 
+  THIS IS UNDER LICENSE TO KNOW ABOUT LICENCE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO/CONTACT
+  IF YOU ARE MAKING COPY OF THE ORGINAL ONE YOU MIGHT RESIEVE COPYWRITE AND WE WILL MAKE A COMPLAINT ON COURT.
+
+  -----TO GET LICENSE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO-----------
+  
+  ------------
+
+  IF YOU WANT AN OPERATING SYSTEM PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO /OR/ HASEEF-WS.NETLIFY.APP
+
+  LICENSE NO :  HW-FL-MB-001-2024
+  ©2024
+
+
+  ----- Dont use this operationg system without lisence-----
+  copyright 2024 Haseef Muhammed
+  Web Craft and Any Time Services
+  Library FLowwaypc
+  css library: Haseef Swift language
+  Server Git Hub
+  This website already hosted on netlify inc
+  -->
 <div class="scrollable" id="scrollable">
     <div class="page">
       <!-- Page 1 content -->
@@ -31,12 +46,12 @@
     </section>
       <section class="align-items-center text-center d-flex justify-content-center">
          <div class="climate">
-            <div class="space p-5"></div>
+            <div class="space p-5 mt-5"></div>
              <!-- <div class="elfsight-app-9af12e47-f376-4c98-a264-b37eeb5a67d1" data-elfsight-app-lazy></div> -->
              <div id="clock-2">
                 <h1 id="date-time" class="text-white text-center"></h1> 
                </div>
-               <div class="space p-5"></div>
+               <div class="space p-5 mt-5"></div>
              </div>
              </section>
               
@@ -57,7 +72,7 @@
                 </div>
                 <div class="col-4 col-md-4">
                     <a id="tap" onclick="audio.play()" href="app-eb-files.html"><img class="app-img img-fluid" src="images/files.png" alt="settings"></a>
-                    <p class="text-white app-txt">EB Files</p>
+                    <p class="text-white app-txt">EB Fies</p>
                 </div>
             </div>
 
@@ -71,8 +86,8 @@
                     <p class="text-white app-txt">EB CHAT</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="index.html"><img class="app-img img-fluid" src="images/i7.png" alt="settings"></a>
-                    <p class="text-white app-txt">Sleep</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-genay.html"><img class="app-img img-fluid" src="images/eb genay.png" alt="settings"></a>
+                    <p class="text-white app-txt">EB GENIE</p>
                 </div>
             </div>
         </div>
