--- a/os/app-eb-stream.html
+++ b/os/app-eb-stream.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="edu_bot_ai-removebg-preview.png" type="image/logo">
     <script src="AgoraRTC_N-4.21.0.js"></script>
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
       /* === removing default button style ===*/
@@ -130,7 +130,7 @@
     $("#submit-form").submit((e)=>{
         e.preventDefault()
         $.ajax({
-            url:"https://script.google.com/macros/s/AKfycbxJ1vk348rGkdO4jEGPyHnKVmQp-NmvqDQ2ONufL1_EmTSoi9agw1sEcKWAyZIWZbqvYg/exec",
+            url:"https://script.google.com/macros/s/AKfycbx_GKjEOdkdkjeXJANQ9nPr3t5B3rW7hGEfIVgNHbtACobPSA5R0BSO_DNdcw26W4Io/exec",
             data:$("#submit-form").serialize(),
             method:"post",
             success:function (response){
@@ -148,7 +148,7 @@
 </script>
   <script src="dialog-sent.js"></script>
     <script src="ebStream.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="bootstrap.js"></script>
 </body>
 </html>
 
