--- a/os/home.html
+++ b/os/home.html
@@ -6,7 +6,7 @@
     <title>EDU BOT</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/icon.png" type="image/logo">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
       <!-- All rights resieved from FLOWWAY PUBLICATIONS 
@@ -86,8 +86,8 @@
                     <p class="text-white app-txt">EB CHAT</p>
                 </div>
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-eb-genay.html"><img class="app-img img-fluid" src="images/eb genay.png" alt="settings"></a>
-                    <p class="text-white app-txt">EB GENIE</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-assistant.html"><img class="app-img img-fluid" src="images/edu bot assistant.png" alt="settings"></a>
+                    <p class="text-white app-txt">EB ASSISTANT</p>
                 </div>
             </div>
         </div>
@@ -101,6 +101,6 @@
 
     <script src="script.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="bootstrap.js"></script>
 </body>
 </html>
