--- a/os/settings.html
+++ b/os/settings.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="images/icon.png" type="image/logo">
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body class="bg-dark">
       <!-- All rights resieved from FLOWWAY PUBLICATIONS 
@@ -80,11 +80,11 @@
           </tr>
           <tr>
             <td class="bg-dark text-white">Version</td>
-            <td class="bg-dark text-white "><a class="text-decoration-none text-white" href="#">5.8</a></td>
+            <td class="bg-dark text-white "><a class="text-decoration-none text-white" href="#">6.1</a></td>
           </tr>
           <tr>
             <td class="bg-dark text-white">Last update date</td>
-            <td class="bg-dark text-white">15-07-2024</td>
+            <td class="bg-dark text-white">21-08-2024</td>
           </tr>
 
           <tr>
@@ -215,6 +215,6 @@ function saver(){
     window.location.href = "settings.html";
 }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="bootstrap.js"></script>
 </body>
 </html>
