app wallet ready

--- a/os/home.html
+++ b/os/home.html
@@ -78,8 +78,8 @@
 
             <div class="row">
                 <div class="col-4 col-md-4">
-                    <a id="tap" onclick="audio.play()" href="app-school.html"><img class="app-img img-fluid" src="images/pmsa.png" alt="settings"></a>
-                    <p class="text-white app-txt">PMSAPTHSS KAKKOVE</p>
+                    <a id="tap" onclick="audio.play()" href="app-eb-vaulter.html"><img class="app-img img-fluid" src="images/vaulter.png" alt="settings"></a>
+                    <p class="text-white app-txt">APP VAULTER</p>
                 </div>
                 <div class="col-4 col-md-4">
                     <a id="tap" onclick="audio.play()" href="app-eb-chat.html"><img class="app-img img-fluid" src="images/EB CHAT.png" alt="settings"></a>
