--- a/os/app-eb-models.html
+++ b/os/app-eb-models.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EB SHOOL</title>
+    <title>EB MODELS</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="images/icon.png" type="image/logo">
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
@@ -35,12 +35,12 @@
 
 <header>
     <nav  class="fixed-top bg-dark">
-        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> PMSAPTHSS KAKKOVE</h4>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Models</h4>
     </nav>
 </header>
 
-<section class="mt-5">
-    <iframe class="bg-white iframe4" src="https://haseefmuhammed.github.io/PMSAPTHSS-Kakkove/" frameborder="0"></iframe>
+<section class="mt-5 eb-models">
+    <h1>biology</h1>
 </section>
 
 
