--- a/os/app-eb-models.html
+++ b/os/app-eb-models.html
@@ -40,7 +40,8 @@
 </header>
 
 <section class="mt-5 eb-models">
-    <h1>biology</h1>
+  <div class="p-3"></div>
+    <h1 class="mt-5">biology</h1>
 </section>
 
 
