--- a/os/app-eb-vaulter.html
+++ b/os/app-eb-vaulter.html
@@ -55,10 +55,10 @@
                 <a id="tap" onclick="audio.play()" href="app-eb-models.html"><img class="app-img img-fluid" src="images/eb models.png" alt="settings"></a>
                 <p class="text-white app-txt">EB MODELS</p>
             </div>
-            <!-- <div class="col-4 col-md-4">
-                <a id="tap" onclick="audio.play()" href="app-eb-files.html"><img class="app-img img-fluid" src="images/files.png" alt="settings"></a>
-                <p class="text-white app-txt">EB Fies</p>
-            </div> -->
+            <div class="col-4 col-md-4">
+                <a id="tap" onclick="audio.play()" href="app-eb-doodle.html"><img class="app-img img-fluid" src="images/white boad logo eb.png" alt="settings"></a>
+                <p class="text-white app-txt">EB Doodle</p>
+            </div>
         </div>
 
         <div class="row">
