doodle , voulter , lumin ai done and very base

--- a/os/app-eb-lumin.html
+++ b/os/app-eb-lumin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EB Doodle</title>
+    <title>EB Loomin</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="icon" href="images/icon.png" type="image/logo">
     <script src="https://kit.fontawesome.com/3945bc0b8d.js" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
 
   ----- Dont use this operationg system without lisence-----
   copyright 2024 Haseef Muhammed
-  Web Craft and Any Time Services
+  Web Craft and Any Time Service
   Library FLowwaypc
   css library: Haseef Swift language
   Server Git Hub
@@ -35,12 +35,12 @@
 
 <header>
     <nav  class="fixed-top bg-dark">
-        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Doodle</h4>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Lumin</h4>
     </nav>
 </header>
 
 <section class="mt-5">
-    <iframe class="bg-white iframe4" src="https://r7.whiteboardfox.com/74750799-6324-7633" frameborder="0"></iframe>
+    <iframe class="bg-white iframe4" src="https://origami.guide/" frameborder="0"></iframe>
 </section>
 
 
