--- a/os/app-eb-vaulter.html
+++ b/os/app-eb-vaulter.html
@@ -65,14 +65,14 @@
                 <a id="tap" onclick="audio.play()" href="app-eb-lumin.html"><img class="app-img img-fluid" src="images/Eb Lumin.png" alt="settings"></a>
                 <p class="text-white app-txt">EB Lumin</p>
             </div>
-            <!-- <div class="col-4 col-md-4">
-                <a id="tap" onclick="audio.play()" href="app-eb-models.html"><img class="app-img img-fluid" src="images/eb models.png" alt="settings"></a>
-                <p class="text-white app-txt">EB MODELS</p>
-            </div> -->
-            <!-- <div class="col-4 col-md-4">
-                <a id="tap" onclick="audio.play()" href="app-eb-doodle.html"><img class="app-img img-fluid" src="images/white boad logo eb.png" alt="settings"></a>
-                <p class="text-white app-txt">EB Doodle</p>
-            </div> -->
+            <div class="col-4 col-md-4">
+                <a id="tap" onclick="audio.play()" href="app-eb-attendece.html"><img class="app-img img-fluid" src="images/Eb Attendance .png" alt="settings"></a>
+                <p class="text-white app-txt">EB Attendance</p>
+            </div>
+            <div class="col-4 col-md-4">
+                <a id="tap" onclick="audio.play()" href="app-eb-translate.html"><img class="app-img img-fluid" src="images/EB Translate .png" alt="settings"></a>
+                <p class="text-white app-txt">EB Translate</p>
+            </div>
         </div>
 
         <div class="row">
