--- a/os/app-eb-stream.html
+++ b/os/app-eb-stream.html
@@ -80,6 +80,11 @@
   This website already hosted on netlify inc
   -->
 
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
+
 <header>
     <nav  class="fixed-top bg-dark">
         <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="home.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Stream</h4>
@@ -146,6 +151,7 @@
         })
     })
 </script>
+  <script src="preload.js"></script>
   <script src="dialog-sent.js"></script>
     <script src="ebStream.js"></script>
     <script src="bootstrap.js"></script>
