--- a/os/home.html
+++ b/os/home.html
@@ -31,6 +31,11 @@
   Server Git Hub
   This website already hosted on netlify inc
   -->
+
+    <!-- Preloader -->
+    <div id="preloader">
+    </div>
+
 <div class="scrollable" id="scrollable">
     <div class="page">
       <!-- Page 1 content -->
@@ -98,7 +103,7 @@
   </div>
 
     
-
+    <script src="preload.js"></script>
     <script src="script.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <script src="bootstrap.js"></script>
