--- a/os/index.html
+++ b/os/index.html
@@ -32,6 +32,12 @@
   Server Git Hub
   This website already hosted on netlify inc
   -->
+
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
+
 <section class="align-items-center text-center">
     <div class="container">
         <div class="row">
@@ -54,7 +60,7 @@
     <a class="button" href="home.html"><button class="btn btn-primary p-2 button"><h4 class="button" id="tap" onclick="audio.play()">Wake up</h4></button></a>
 </section>
     
-
+    <script src="preload.js"></script>
     <script src="script.js"></script>
     <script src="bootstrap.js"></script>
 </body>
