--- a/os/app-eb-assistant.html
+++ b/os/app-eb-assistant.html
@@ -67,6 +67,11 @@ dialog{
   This website already hosted on netlify inc
   -->
 
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
+
 <header>
     <nav  class="fixed-top bg-dark">
         <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="home.html"> <i class="fa-solid fa-arrow-left"></i></a> EB ASSISTANT</h4>
@@ -93,7 +98,7 @@ dialog{
 
 
     
-
+    <script src="preload.js"></script>
     <script src="script.js"></script>
    <script src="bootstrap.js"></script>
 
