--- a/os/app-eb-attendece.html
+++ b/os/app-eb-attendece.html
@@ -33,6 +33,11 @@
   This website already hosted on netlify inc
   -->
 
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
+
 <header>
     <nav  class="fixed-top bg-dark">
         <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Attendance</h4><div id="refreshTimer" class="text-center mt-2 text-white">Refreshing in <span id="countdown">15</span> seconds</div>
@@ -47,7 +52,7 @@
 
 
     
-
+    <script src="preload.js"></script>
     <script src="script.js"></script>
     <script src="bootstrap.js"></script>
     <script>
