--- a/os/app-eb-doodle.html
+++ b/os/app-eb-doodle.html
@@ -32,6 +32,10 @@
   Server Git Hub
   This website already hosted on netlify inc
   -->
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
 
 <header>
     <nav  class="fixed-top bg-dark">
@@ -47,7 +51,7 @@
 
 
     
-
+    <script src="preload.js"></script>
     <script src="script.js"></script>
     <script src="bootstrap.js"></script>
 </body>
