--- a/os/app-eb-translate.html
+++ b/os/app-eb-translate.html
@@ -213,6 +213,11 @@
   This website already hosted on netlify inc
   -->
 
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
+
 <header>
     <nav  class="fixed-top bg-dark">
         <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid fa-arrow-left"></i></a> EB Translate</h4>
@@ -254,7 +259,7 @@
 
 
     
-
+  <script src="preload.js"></script>
     <script src="script.js"></script>
     <script src="bootstrap.js"></script>
     <script src="app-eb-translate-lang.js"></script>
