--- a/os/settings.html
+++ b/os/settings.html
@@ -33,6 +33,10 @@
   This website already hosted on netlify inc
   -->
 
+     <!-- Preloader -->
+     <div id="preloader">
+    </div>
+
 <header>
     <nav class="fixed-top bg-dark">
         <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="home.html"> <i class="fa-solid fa-arrow-left"></i></a> Settings</h4>
@@ -227,5 +231,6 @@ let tapCount = 0;
         });
     </script>
     <script src="bootstrap.js"></script>
+    <script src="preload.js"></script>
 </body>
 </html>
