12 feature ready tring to auto api

--- a/os/app-eb-assistant.html
+++ b/os/app-eb-assistant.html
@@ -121,7 +121,7 @@ const predefinedResponses = {
     "where are you from": "I belong to p.m.s.a.p.t.h.s.s Kakkove . ATL Lab",
     "who is your designer": "Agney. A. is a multifaceted talent, excelling as a singer, designer, and technician. With a passion for music, Agney A delivers captivating performances that resonate with audiences. His design skills and technical expertise complement his artistic endeavors, creating a unique blend of creativity and precision.",
     "tell me a welcome speech": "Chirak vijayakaramayi aaghōshikkaanaya ella vidyarthikalkum, adhyapakarum abhinandanangal. Ee kalamela ningalude kazhivukale puthiya uyaranngalil ethichirikkatte. Thank you, and enjoy the show! ",
-    "Introduce yourself": "My name is Edu Bot Ai , Iam a robot teacher , I will give the answer for every questions , I have many intractive feature ,"
+    "please inaugurate": "Welcome to Futuristic A.T.L EXPO 2K24-25 at P.M.S.A.P.T.H.S.S. Kakkove! Today, we enter a world where ideas turn into reality and creativity knows no limits. This expo is a celebration of young minds shaping the future through technology and innovation. Let’s ignite curiosity, embrace challenges, and create solutions that redefine tomorrow. The future starts here, with YOU! .Let the innovations begin!. njaan ninggaludee swantham A.I Teacher, EDU Bot A.I , ninggaludee kuudee expoyil njaanum undaakum. nanhhi."
 };
 
 recognition.onresult = (event) => {
