--- a/os/app-school.html
+++ b/os/app-school.html
@@ -44,7 +44,7 @@
 </header>
 
 <section class="mt-5">
-    <iframe class="bg-white iframe4" src="https://haseefmuhammed.github.io/PMSAPTHSS-Kakkove/" frameborder="0"></iframe>
+    <iframe class="bg-white iframe4" src="https://pmsapthss.in/" frameborder="0"></iframe>
 </section>
 
 
