--- a/os/app-eb-doodle.html
+++ b/os/app-eb-doodle.html
@@ -44,12 +44,25 @@
 </header>
 
 <section class="mt-5">
-    <iframe class="bg-white iframe4" src="https://r9.whiteboardfox.com/94638479-4914-7185" frameborder="0"></iframe>
+    <iframe id="dynamicIframe" class="bg-white iframe4" src="" frameborder="0"></iframe>
 </section>
+<script>
+  // Google Sheet published as CSV
+  const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQUcSRSgAOO3tDC82Y0zY5uPNl0SHT5KKygGnkwxyWH7cjCvd8gElQ-u1cnWLXhv4rRhkaypfx8ovre/pub?output=csv';
 
-
-
-
+  fetch(csvUrl)
+    .then(response => response.text())
+    .then(data => {
+      const lines = data.trim().split('\n');
+      if (lines.length > 1) {
+        const url = lines[1].split(',')[0].replace(/"/g, '');
+        document.getElementById('dynamicIframe').src = url;
+      }
+    })
+    .catch(err => {
+      console.error('Failed to fetch iframe URL from Google Sheet:', err);
+    });
+</script>
     
     <script src="preload.js"></script>
     <script src="script.js"></script>
