Recovered updates before merging master to feature

--- a/os/app-eb-doodle.html
+++ b/os/app-eb-doodle.html
@@ -39,7 +39,7 @@
 
 <header>
     <nav  class="fixed-top glassmorphism">
-        <h4 class="text-dark p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-dark fa-arrow-left"></i></a> EB Doodle</h4>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-white fa-arrow-left"></i></a> EB Doodle</h4>
     </nav>
 </header>
 
