--- a/os/app-eb-vaulter.html
+++ b/os/app-eb-vaulter.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body class="bg-dark">
+
+        <!-- Video Background -->
+    <video id="video-background" autoplay muted loop playsinline>
+        <source src="images/bgvideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Dark Overlay -->
+    <div class="video-overlay"></div>
       <!-- All rights resieved from FLOWWAY PUBLICATIONS 
   THIS IS UNDER LICENSE TO KNOW ABOUT LICENCE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO/CONTACT
   IF YOU ARE MAKING COPY OF THE ORGINAL ONE YOU MIGHT RESIEVE COPYWRITE AND WE WILL MAKE A COMPLAINT ON COURT.
@@ -77,6 +86,14 @@
             <div class="col-4 col-md-4">
                 <a id="tap" onclick="audio.play()" href="app-eb-translate.html"><img class="app-img img-fluid" src="images/EB Translate .png" alt="settings"></a>
                 <p class="text-white app-txt">EB Translate</p>
+            </div>
+            <div class="col-4 col-md-4">
+                <a id="tap" onclick="audio.play()" href="app-eb-kids-mode.html"><img class="app-img img-fluid" src="images/kids mode.png" alt="settings"></a>
+                <p class="text-white app-txt">EB Kids +</p>
+            </div>
+            <div class="col-4 col-md-4">
+                <a id="tap" onclick="audio.play()" href="app-eb-motive.html"><img class="app-img img-fluid" src="images/motive.png" alt="settings"></a>
+                <p class="text-white app-txt">EB Inspire</p>
             </div>
         </div>
 
