--- a/os/home.html
+++ b/os/home.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
+
+    <!-- Video Background -->
+    <!-- <video id="video-background" autoplay muted loop playsinline>
+        <source src="images/bgvideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video> -->
+
+    <!-- Dark Overlay -->
+    <div class="video-overlay"></div>
+
       <!-- All rights resieved from FLOWWAY PUBLICATIONS 
   THIS IS UNDER LICENSE TO KNOW ABOUT LICENCE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO/CONTACT
   IF YOU ARE MAKING COPY OF THE ORGINAL ONE YOU MIGHT RESIEVE COPYWRITE AND WE WILL MAKE A COMPLAINT ON COURT.
