--- a/os/index.html
+++ b/os/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
 <div class="glassmorphism-screen"></div>
+
+<!-- Animated Forest Learning Elements -->
+<div class="butterfly-1">🦋</div>
+<div class="butterfly-2">🦋</div>
+<div class="learning-book">📚</div>
+<div class="science-dna">🧬</div>
+<div class="science-microscope">🔬</div>
+<div class="science-atom">⚛️</div>
+<div class="science-tube">🧪</div>
+<div class="ai-robot">🤖</div>
+<div class="ai-bulb">💡</div>
+
       <!-- All rights resieved from FLOWWAY PUBLICATIONS 
   THIS IS UNDER LICENSE TO KNOW ABOUT LICENCE PLEASE VISIT WWW.WEBCRAAFT.42WEB.IO/CONTACT
   IF YOU ARE MAKING COPY OF THE ORGINAL ONE YOU MIGHT RESIEVE COPYWRITE AND WE WILL MAKE A COMPLAINT ON COURT.
