--- a/os/settings.html
+++ b/os/settings.html
@@ -84,11 +84,11 @@
           </tr>
           <tr>
             <td class="bg-dark text-white">Version</td>
-            <td class="bg-dark text-white "><a class="text-decoration-none text-white" id="devTap">9.1</a></td>
+            <td class="bg-dark text-white "><a class="text-decoration-none text-white" id="devTap">10.1 Alpha</a></td>
           </tr>
           <tr>
             <td class="bg-dark text-white">Last update date</td>
-            <td class="bg-dark text-white">01-06-2025</td>
+            <td class="bg-dark text-white">28-01-2026</td>
           </tr>
 
           <tr>
