--- a/os/app-eb-attendece.html
+++ b/os/app-eb-attendece.html
@@ -40,7 +40,7 @@
 
 <header>
     <nav  class="fixed-top glassmorphism">
-        <h4 class="text-dark p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-dark fa-arrow-left"></i></a> EB Attendance</h4><div id="refreshTimer" class="text-center text-dark mt-2">Refreshing in <span class="text-dark" id="countdown">15</span> seconds</div>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-white fa-arrow-left"></i></a> EB Attendance</h4><div id="refreshTimer" class="text-center text-dark mt-2">Refreshing in <span class="text-dark" id="countdown">15</span> seconds</div>
     </nav>
 </header>
 
