--- a/os/app-eb-files.html
+++ b/os/app-eb-files.html
@@ -41,7 +41,7 @@
 
 <header>
     <nav  class="fixed-top glassmorphism">
-        <h4 class="text-dark p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-dark tap" href="home.html"> <i class="fa-solid fa-arrow-left text-dark"></i></a> EB Files</h4>
+        <h4 class="p-1 mx-4"><a id="tap" onclick="audio.play()" class="tap" href="home.html"> <i class="fa-solid fa-arrow-left text-dark"></i></a> EB Files</h4>
     </nav>
 </header>
 
