--- a/os/app-eb-translate.html
+++ b/os/app-eb-translate.html
@@ -220,7 +220,7 @@
 
 <header>
     <nav  class="fixed-top glassmorphism">
-        <h4 class="text-dark p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-dark fa-arrow-left"></i></a> EB Translate</h4>
+        <h4 class="text-white p-1 mx-4"><a id="tap" onclick="audio.play()" class="text-white tap" href="app-eb-vaulter.html"> <i class="fa-solid text-white fa-arrow-left"></i></a> EB Translate</h4>
     </nav>
 </header>
 
