API Changed , Kids model new , new eye

--- a/os/app-eb-kids-mode.html
+++ b/os/app-eb-kids-mode.html
@@ -103,7 +103,7 @@
 
 <script>
 // Configuration
-const URL_MODEL = "https://teachablemachine.withgoogle.com/models/PszFBY61d/";
+const URL_MODEL = "https://teachablemachine.withgoogle.com/models/3rlrxwpBt/";
 const THINGSPEAK_URL = "https://api.thingspeak.com/update?api_key=WFU6A74HL6ZVJS4C&field1=";
 
 let recognizer;
