--- a/os/app-eb-assistant.html
+++ b/os/app-eb-assistant.html
@@ -718,9 +718,9 @@ dialog p {
   })();
 </script>
 <script>
-const apiKey = 'AIzaSyABrYuozFBNmV1cSNZM87fubU0HwIOEn14'; // Your actual API key
+const apiKey = 'AIzaSyBP1fH22QrUpqCs-db6PUppWTfvCHFcGcY'; // Your actual API key
 const GEMINI_API_URL = 'https://generativelanguage.googleapis.com/v1beta/models';
-const MODEL_NAME = 'gemini-2.5-flash'; // More stable model
+const MODEL_NAME = 'gemini-2.5-flash-lite'; // More stable model
 const endpoint = `${GEMINI_API_URL}/${MODEL_NAME}:generateContent?key=${apiKey}`;
 
 window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
